--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/twitter
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
 
+jwt.header=Authorization
+jwt.secret=dejavu
+jwt.expiration=604800
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=webstore.perfume@gmail.com
+spring.mail.password=Fcnhfk-rbtd
+spring.mail.port=465
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+mail.debug=false
+
+hostname=localhost:3000
