--- a/client/package.json
+++ b/client/package.json
@@ -29,9 +29,9 @@
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "date-fns": "^2.22.1"
   },
-  "proxy": "http://localhost:3001",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
