--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^2.5.2",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
@@ -16,12 +17,15 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
+    "@types/yup": "^0.29.11",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
+    "date-fns": "^2.22.1",
     "immer": "^9.0.2",
     "json-server": "^0.16.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.8.3",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -30,7 +34,7 @@
     "reselect": "^4.0.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
-    "date-fns": "^2.22.1"
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
