Added Image model, repository, dto. Added upload image to s3 bucket.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,15 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2MB
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=10MB
+
+amazon.aws.access-key=AKIATP4TDBGPCTXUIXD2
+amazon.aws.secret-key=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
+amazon.s3.bucket.name=twitterclonestorage
+
 jwt.header=Authorization
 jwt.secret=dejavu
 jwt.expiration=604800
