--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^2.22.1",
     "immer": "^9.0.2",
     "json-server": "^0.16.3",
+    "medium-zoom": "^1.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.8.3",
