--- a/client/package.json
+++ b/client/package.json
@@ -35,7 +35,8 @@
     "reselect": "^4.0.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
-    "yup": "^0.32.9"
+    "yup": "^0.32.9",
+    "node-sass": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
