--- a/client/package.json
+++ b/client/package.json
@@ -20,10 +20,12 @@
     "@types/yup": "^0.29.11",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
+    "clsx": "^1.1.1",
     "date-fns": "^2.22.1",
     "immer": "^9.0.2",
     "json-server": "^0.16.3",
     "medium-zoom": "^1.0.6",
+    "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.8.3",
@@ -35,8 +37,7 @@
     "reselect": "^4.0.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
-    "yup": "^0.32.9",
-    "node-sass": "^6.0.0"
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
