Added search by required text. Added displaying user liked tweets. Minor fixes.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ amazon.s3.bucket.name=twitterclonestorage
 
 jwt.header=Authorization
 jwt.secret=dejavu
-jwt.expiration=604800
+jwt.expiration=6048000
 
 spring.mail.host=smtp.gmail.com
 spring.mail.username=webstore.perfume@gmail.com
