--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/classnames": "^2.3.1",
+    "@types/emoji-mart": "^3.0.5",
     "@types/history": "^4.7.9",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
@@ -23,6 +24,7 @@
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
     "date-fns": "^2.22.1",
+    "emoji-mart": "^3.0.1",
     "immer": "^9.0.2",
     "json-server": "^0.16.3",
     "medium-zoom": "^1.0.6",
