--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/classnames": "^2.3.1",
+    "@types/emoji-js": "^3.5.0",
     "@types/emoji-mart": "^3.0.5",
     "@types/history": "^4.7.9",
     "@types/jest": "^26.0.15",
@@ -24,10 +25,12 @@
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
     "date-fns": "^2.22.1",
+    "emoji-js": "^3.5.0",
     "emoji-mart": "^3.0.1",
     "immer": "^9.0.2",
     "json-server": "^0.16.3",
     "medium-zoom": "^1.0.6",
+    "mui-rte": "^1.29.0",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -35,6 +38,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-string-replace": "^0.4.4",
     "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
