Fixed travis ci file

--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -155,5 +156,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
