--- a/.travis.yml
+++ b/.travis.yml
@@ -28,15 +28,16 @@ script:
   - mvn clean install
 
 before_script:
-  - psql -c 'create database twittertest;' -U postgres -p 5433
-  - psql -c 'create database twitter;' -U postgres -p 5433
+  - psql -c 'create database twittertest;' -U postgres
+  - psql -c 'create database twitter;' -U postgres
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
 
 env:
   global:
-    - PGPORT=5433
+    - PGUSER=postgres
+    - PGPORT=5432
     - CODECOV_TOKEN="a57f9ff0-a15a-453a-b76c-750140eabd87"
   jobs:
-    - DB_PORT=5433 DB_USERNAME=postgres
+    - DB_PORT=5432 DB_USERNAME=postgres
