--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -17,7 +17,7 @@ jwt.secret=dejavu
 jwt.expiration=6048000
 
 spring.mail.host=smtp.gmail.com
-spring.mail.username=webstore.perfume@gmail.com
+spring.mail.username=twitter.spring.reactjs@gmail.com
 spring.mail.password=Fcnhfk-rbtd
 spring.mail.port=465
 spring.mail.protocol=smtps
