--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
+    "@types/react-copy-to-clipboard": "^5.0.1",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
@@ -35,6 +36,7 @@
     "mui-rte": "^1.29.0",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.8.3",
     "react-redux": "^7.2.4",
