--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
             <version>0.9.1</version>
         </dependency>
         <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.13.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf</artifactId>
             <version>3.0.12.RELEASE</version>
