Added parsing metadata from link in tweet text.

--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
             <version>0.9.1</version>
         </dependency>
         <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20200518</version>
+        </dependency>
+        <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>1.13.1</version>
