--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/twitter
+spring.datasource.url=jdbc:postgresql://localhost:5432/twitter4
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
@@ -11,6 +11,8 @@ spring.servlet.multipart.max-request-size=10MB
 amazon.aws.access-key=AKIATP4TDBGPCTXUIXD2
 amazon.aws.secret-key=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
 amazon.s3.bucket.name=twitterclonestorage
+
+google.api.key=AIzaSyBtQYzGSmcCzqOztibg1BgSTqv0xwg1D-M
 
 jwt.header=Authorization
 jwt.secret=dejavu
