--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
+    "@types/recompose": "^0.30.8",
     "@types/sockjs-client": "^1.5.1",
     "@types/yup": "^0.29.11",
     "axios": "^0.21.1",
@@ -43,6 +44,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-string-replace": "^0.4.4",
+    "recompose": "^0.30.0",
     "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
