Added delete and edit list to controller, mapper and service. Added delete and edit list components. Fixed sql migration. Minor fixes.

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -12,6 +12,8 @@ amazon.aws.access-key=AKIATP4TDBGPCTXUIXD2
 amazon.aws.secret-key=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
 amazon.s3.bucket.name=twitterclonestorage
 
+google.api.key=AIzaSyBtQYzGSmcCzqOztibg1BgSTqv0xwg1D-M
+
 jwt.header=Authorization
 jwt.secret=dejavu
 jwt.expiration=6048000
