--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "@types/sockjs-client": "^1.5.1",
     "@types/yup": "^0.29.11",
     "axios": "^0.21.1",
+    "bowser": "^2.11.0",
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
     "date-fns": "^2.22.1",
