Added new tests. Fixed failing tests. Refactored model entities and repos. Minor fixes.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ amazon.aws.access-key=AKIATP4TDBGPAJUNI5EY
 amazon.aws.secret-key=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
 amazon.s3.bucket.name=twitterclonestorage
 
+google.api.url=https://www.googleapis.com/youtube/v3/videos?id=%s&key=%s&part=snippet,contentDetails,statistics,status
 google.api.key=AIzaSyBtQYzGSmcCzqOztibg1BgSTqv0xwg1D-M
 
 jwt.header=Authorization
