--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/twitter7
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.jpa.show-sql=true
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2MB
