--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/twitter7
+spring.datasource.url=jdbc:postgresql://localhost:5432/twitter
 spring.datasource.username=postgres
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+#spring.flyway.enabled=false
+#spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2MB
