--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/twitter
+spring.datasource.url=jdbc:postgresql://localhost:5432/twitter9
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.generate-ddl=false
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
 #spring.flyway.enabled=false
 #spring.flyway.baseline-on-migrate=true
