Incorrect value expression

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,4 +34,4 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 mail.debug=false
 
-hostname=localhost:3000
+host.name=localhost:3000
