--- a/client/package.json
+++ b/client/package.json
@@ -24,8 +24,10 @@
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "@types/recompose": "^0.30.8",
+    "@types/redux-mock-store": "^1.0.3",
     "@types/sockjs-client": "^1.5.1",
     "@types/yup": "^0.29.11",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "axios": "^0.21.1",
     "bowser": "^2.11.0",
     "caniuse-lite": "^1.0.30001299",
@@ -50,6 +52,7 @@
     "react-string-replace": "^0.4.4",
     "recompose": "^0.30.0",
     "redux": "^4.1.0",
+    "redux-mock-store": "^1.5.4",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
     "sockjs-client": "^1.5.1",
@@ -68,6 +71,9 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "jest": {
+    "setupFilesAfterEnv": ["<rootDir>/src/setupTests.js"]
   },
   "browserslist": {
     "production": [
