Added DeleteListModal.test.tsx and ManageMembersModal.test.tsx. Fixed tests. Added config files. Fixed dependencies.

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -21,7 +21,10 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src"
+    "src/**/*"
   ],
-  "typeRoots": ["./src/types.d.ts", "./node_modules/@types"]
+  "typeRoots": [
+    "./src/types.d.ts",
+    "./node_modules/@types"
+  ]
 }
