--- a/client/package.json
+++ b/client/package.json
@@ -9,15 +9,14 @@
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@mui/utils": "^5.2.2",
     "@stomp/stompjs": "^6.1.0",
-    "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/classnames": "^2.3.1",
     "@types/emoji-js": "^3.5.0",
     "@types/emoji-mart": "^3.0.5",
     "@types/enzyme": "^3.10.11",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/history": "^4.7.9",
-    "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-copy-to-clipboard": "^5.0.1",
@@ -39,22 +38,23 @@
     "emoji-js": "^3.5.0",
     "emoji-mart": "^3.0.1",
     "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
     "immer": "^9.0.2",
     "json-server": "^0.16.3",
     "medium-zoom": "^1.0.6",
     "mui-rte": "^1.29.0",
     "node-sass": "^6.0.0",
-    "react": "^17.0.2",
+    "react": "^16.14.0",
     "react-copy-to-clipboard": "^5.0.4",
-    "react-dom": "^17.0.2",
+    "react-dom": "^16.14.0",
     "react-hook-form": "^7.8.3",
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-string-replace": "^0.4.4",
-    "react-test-renderer": "^18.0.0",
+    "react-test-renderer": "^16.14.0",
     "recompose": "^0.30.0",
     "redux": "^4.1.0",
     "redux-mock-store": "^1.5.4",
@@ -90,6 +90,17 @@
     ]
   },
   "devDependencies": {
-    "axios-mock-adapter": "^1.20.0"
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@types/jest": "^26.0.24",
+    "axios-mock-adapter": "^1.20.0",
+    "babel-jest": "^26.6.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.0",
+    "jsdom": "19.0.0",
+    "jsdom-global": "3.0.2",
+    "ts-jest": "^26.5.6"
   }
 }
