--- a/client/package.json
+++ b/client/package.json
@@ -41,8 +41,11 @@
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
     "immer": "^9.0.2",
+    "jest-websocket-mock": "^2.3.0",
     "json-server": "^0.16.3",
     "medium-zoom": "^1.0.6",
+    "mock-socket": "^9.1.3",
+    "mock-stomp-broker": "^1.2.0",
     "mui-rte": "^1.29.0",
     "node-sass": "^6.0.0",
     "react": "^16.14.0",
