--- a/client/package.json
+++ b/client/package.json
@@ -53,6 +53,7 @@
     "react-dom": "^16.14.0",
     "react-hook-form": "^7.8.3",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
