Added getUserPrincipal to AuthFilter. Minor fixes.

--- a/commons-util/pom.xml
+++ b/commons-util/pom.xml
@@ -47,5 +47,11 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.gmail.merikbest2015</groupId>
+            <artifactId>client</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
