--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -50,6 +50,11 @@
         </dependency>
         <dependency>
             <groupId>com.gmail.merikbest2015</groupId>
+            <artifactId>client</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.gmail.merikbest2015</groupId>
             <artifactId>commons-util</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
