--- a/tag-service/pom.xml
+++ b/tag-service/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>com.gmail.merikbest2015</groupId>
             <artifactId>client</artifactId>
             <version>0.0.1-SNAPSHOT</version>
