--- a/commons/src/main/resources/application.yml
+++ b/commons/src/main/resources/application.yml
@@ -7,6 +7,7 @@ spring:
     jpa:
         hibernate:
             ddl-auto: validate
+        show-sql: true
         properties:
             hibernate:
                 dialect: org.hibernate.dialect.PostgreSQLDialect
