--- a/config-server/src/main/resources/config/image-service.yml
+++ b/config-server/src/main/resources/config/image-service.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
     application:
-        name: topic-service
+        name: image-service
     zipkin:
         base-url: http://localhost:9411
 
