--- a/config-server/src/main/resources/config/lists-service.yml
+++ b/config-server/src/main/resources/config/lists-service.yml
@@ -11,6 +11,7 @@ spring:
     jpa:
         hibernate:
             ddl-auto: validate
+        show-sql: true
         properties:
             hibernate:
                 dialect: org.hibernate.dialect.PostgreSQLDialect
