--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>lists-service</module>
         <module>chat-service</module>
         <module>commons-new</module>
+        <module>notification-service</module>
     </modules>
 
     <properties>
