--- a/tweet-service/pom.xml
+++ b/tweet-service/pom.xml
@@ -45,14 +45,14 @@
             <artifactId>json</artifactId>
             <version>20200518</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.gmail.merikbest2015</groupId>-->
+<!--            <artifactId>client</artifactId>-->
+<!--            <version>0.0.1-SNAPSHOT</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>com.gmail.merikbest2015</groupId>
-            <artifactId>client</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.gmail.merikbest2015</groupId>
-            <artifactId>commons</artifactId>
+            <artifactId>commons-new</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
