Refactor chat service.

--- a/config-server/src/main/resources/config/api-gateway.yml
+++ b/config-server/src/main/resources/config/api-gateway.yml
@@ -46,6 +46,13 @@ spring:
                     filters:
                         - AuthFilter
 
+                -   id: chat-service
+                    uri: lb://chat-service
+                    predicates:
+                        - Path=/ui/v1/chat/**
+                    filters:
+                        - AuthFilter
+
 
     zipkin:
         base-url: http://localhost:9411
