--- a/chat-service/pom.xml
+++ b/chat-service/pom.xml
@@ -37,12 +37,7 @@
         </dependency>
         <dependency>
             <groupId>com.gmail.merikbest2015</groupId>
-            <artifactId>commons</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.gmail.merikbest2015</groupId>
-            <artifactId>client</artifactId>
+            <artifactId>commons-new</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
