--- a/config-server/src/main/resources/config/chat-service.yml
+++ b/config-server/src/main/resources/config/chat-service.yml
@@ -4,7 +4,7 @@ spring:
     application:
         name: chat-service
     datasource:
-        url: jdbc:postgresql://localhost:5432/twitter9
+        url: jdbc:postgresql://localhost:5432/chat
         username: postgres
         password: root
         driverClassName: org.postgresql.Driver
@@ -15,7 +15,7 @@ spring:
             hibernate:
                 dialect: org.hibernate.dialect.PostgreSQLDialect
     flyway:
-        locations: classpath:db/migration
+        locations: classpath:db/migration/chat
     zipkin:
         base-url: http://localhost:9411
     rabbitmq:
