--- a/email-service/pom.xml
+++ b/email-service/pom.xml
@@ -51,7 +51,7 @@
         </dependency>
         <dependency>
             <groupId>com.gmail.merikbest2015</groupId>
-            <artifactId>client</artifactId>
+            <artifactId>commons-new</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
