--- a/config-server/src/main/resources/config/api-gateway.yml
+++ b/config-server/src/main/resources/config/api-gateway.yml
@@ -53,6 +53,12 @@ spring:
                     filters:
                         - AuthFilter
 
+                -   id: notification-service
+                    uri: lb://notification-service
+                    predicates:
+                        - Path=/ui/v1/notification/**
+                    filters:
+                        - AuthFilter
 
     zipkin:
         base-url: http://localhost:9411
