--- a/config-server/src/main/resources/config/api-gateway.yml
+++ b/config-server/src/main/resources/config/api-gateway.yml
@@ -60,6 +60,13 @@ spring:
                     filters:
                         - AuthFilter
 
+                -   id: image-service
+                    uri: lb://image-service
+                    predicates:
+                        - Path=/api/v1/image/upload
+                    filters:
+                        - AuthFilter
+
     zipkin:
         base-url: http://localhost:9411
 
