--- a/config-server/src/main/resources/application.yaml
+++ b/config-server/src/main/resources/application.yaml
@@ -12,9 +12,11 @@ spring:
                 native:
                     search-locations: classpath:/config
     zipkin:
-        base-url: http://localhost:9411
+        base-url: http://${ZIPKIN_HOST:localhost}:9411
 
 eureka:
     client:
+        registerWithEureka: false
+        fetchRegistry: false
         service-url:
-            defaultZone: http://localhost:8761/eureka
+            defaultZone: http://${EUREKA_HOST:localhost}:8761/eureka
