--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -8,13 +8,13 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>eureka-server</artifactId>
-<!--    <packaging>jar</packaging>-->
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <name>eureka-server</name>
 
     <properties>
+        <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -31,4 +31,13 @@
             <artifactId>spring-cloud-sleuth-zipkin</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
