--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     application:
         name: eureka-server
     zipkin:
-        base-url: http://localhost:9411
+        base-url: http://${ZIPKIN_HOST:localhost}:9411
 
 eureka:
     client:
