--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.6.7</version>
+    </parent>
+
     <groupId>com.gmail.merikbest2015</groupId>
     <artifactId>twitter-spring-reactjs</artifactId>
     <version>0.0.1-SNAPSHOT</version>
