Added docker files to api-gateway and user services. Minor fixes.

--- a/api-gateway/src/main/resources/bootstrap.yml
+++ b/api-gateway/src/main/resources/bootstrap.yml
@@ -5,4 +5,4 @@ spring:
         name: api-gateway
     cloud:
         config:
-            uri: http://localhost:8888/
+            uri: http://${CONFIG_SERVER_HOST:localhost}:8888/
