--- a/config-server/src/main/resources/application.yaml
+++ b/config-server/src/main/resources/application.yaml
@@ -16,7 +16,9 @@ spring:
 
 eureka:
     client:
-        registerWithEureka: false
-        fetchRegistry: false
         service-url:
             defaultZone: http://${EUREKA_HOST:localhost}:8761/eureka
+        fetch-registry: true
+        register-with-eureka: true
+    instance:
+        hostname: ${EUREKA_HOST:localhost}
