--- a/config-server/src/main/resources/config/topic-service.yml
+++ b/config-server/src/main/resources/config/topic-service.yml
@@ -27,3 +27,5 @@ eureka:
             defaultZone: http://${EUREKA_HOST:localhost}:8761/eureka
         fetch-registry: true
         register-with-eureka: true
+    instance:
+        hostname: ${EUREKA_HOST:localhost}
