--- a/config-server/src/main/resources/config/topic-service-test.yml
+++ b/config-server/src/main/resources/config/topic-service-test.yml
@@ -10,10 +10,14 @@ spring:
         driverClassName: org.postgresql.Driver
     jpa:
         hibernate:
-            ddl-auto: create
+            ddl-auto: none
         properties:
             hibernate:
                 dialect: org.hibernate.dialect.PostgreSQLDialect
+    sql:
+        init:
+            mode: always
+            data-locations: classpath:sql-test/clear-topic-db.sql, classpath:sql-test/populate-topic-db.sql
 eureka:
     client:
         service-url:
