Added kafka producer and consumer to user and topic services.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,35 @@ services:
         networks:
             - spring
 
+    zookeeper:
+        image: confluentinc/cp-zookeeper:7.0.1
+        container_name: zookeeper
+        ports:
+            - "2181:2181"
+        environment:
+            ZOOKEEPER_CLIENT_PORT: 2181
+            ZOOKEEPER_TICK_TIME: 2000
+        networks:
+            - spring
+
+    broker:
+        image: confluentinc/cp-kafka:7.0.1
+        container_name: broker
+        ports:
+            - "9092:9092"
+        depends_on:
+            - zookeeper
+        environment:
+            KAFKA_BROKER_ID: 1
+            KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
+            KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
+            KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092,PLAINTEXT_INTERNAL://broker:29092
+            KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+            KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+            KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+        networks:
+            - spring
+
     grafana:
         container_name: grafana
         build: 'dashboard/grafana'
@@ -139,6 +168,7 @@ services:
             - postgres
             - zipkin
             - rabbitmq
+            - broker
             - eureka-server
             - config-server
 
@@ -183,6 +213,7 @@ services:
             - postgres
             - zipkin
             - rabbitmq
+            - broker
             - eureka-server
             - config-server
 
