--- a/config-server/src/main/resources/config/user-service.yml
+++ b/config-server/src/main/resources/config/user-service.yml
@@ -20,7 +20,8 @@ spring:
         base-url: http://${ZIPKIN_HOST:localhost}:9411
     rabbitmq:
         addresses: ${RABBITMQ_HOST:localhost}:5672
-
+    kafka:
+        bootstrap-servers: localhost:9092
 rabbitmq:
     exchanges:
         internal: internal.exchange
