Refactored lists service. Fixes.

--- a/config-server/src/main/resources/config/lists-service.yml
+++ b/config-server/src/main/resources/config/lists-service.yml
@@ -20,15 +20,16 @@ spring:
         base-url: http://${ZIPKIN_HOST:localhost}:9411
     rabbitmq:
         addresses: ${RABBITMQ_HOST:localhost}:5672
-
+    kafka:
+        bootstrap-servers: localhost:9092
+        consumer:
+            group-id: lists
 resilience4j:
     circuitbreaker:
         instances:
             notification-service:
                 minimum-number-of-calls: 5
             tweet-service:
-                minimum-number-of-calls: 5
-            user-service:
                 minimum-number-of-calls: 5
 feign:
     circuitbreaker:
