Refactored tweet service

--- a/config-server/src/main/resources/config/tweet-service.yml
+++ b/config-server/src/main/resources/config/tweet-service.yml
@@ -20,7 +20,10 @@ spring:
         base-url: http://${ZIPKIN_HOST:localhost}:9411
     rabbitmq:
         addresses: ${RABBITMQ_HOST:localhost}:5672
-
+    kafka:
+        bootstrap-servers: localhost:9092
+        consumer:
+            group-id: tweet
 resilience4j:
     circuitbreaker:
         instances:
