changed some content in the xml file

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>twitter-spring-reactjs</name>
     <description>Twitter clone</description>
+<name>this is a great project</name>
+
+
 
     <modules>
         <module>eureka-server</module>
