Refactored migration scripts

--- a/config-server/src/main/resources/config/chat-service.yml
+++ b/config-server/src/main/resources/config/chat-service.yml
@@ -15,7 +15,7 @@ spring:
             hibernate:
                 dialect: org.hibernate.dialect.PostgreSQLDialect
     flyway:
-        locations: classpath:db/migration/chat
+        locations: classpath:db/migration
     zipkin:
         base-url: http://${ZIPKIN_HOST:localhost}:9411
     rabbitmq:
