Removed unnecessary props from configs. Fixed lists tests.

--- a/config-server/src/main/resources/config/tag-service.yml
+++ b/config-server/src/main/resources/config/tag-service.yml
@@ -26,7 +26,7 @@ spring:
 resilience4j:
     circuitbreaker:
         instances:
-            user-service:
+            tweet-service:
                 minimum-number-of-calls: 5
 feign:
     circuitbreaker:
