Fixed chat service tests. Minor fixes.

--- a/config-server/src/main/resources/config/api-gateway.yml
+++ b/config-server/src/main/resources/config/api-gateway.yml
@@ -75,7 +75,7 @@ spring:
                 -   id: notification-service
                     uri: lb://notification-service
                     predicates:
-                        - Path=/ui/v1/notification/**, /api/v1/notification/**
+                        - Path=/ui/v1/notification/**
                     filters:
                         - AuthFilter
 
